# novel-reader

./: .gitignore  README.md  flake.nix  pyproject.toml  python.nix
src/novel_reader/: __init__.py  exceptions.py  novel.py
src/novel_reader/cli/: __init__.py  help_cli.py  translate_cli.py
src/novel_reader/fetchers/: __init__.py  base_fetcher.py  http_fetcher.py  ncode_syosetu_fetcher.py
src/novel_reader/translators/: __init__.py  base_translator.py  ollama_translator.py  sakura_translator.py
src/novel_reader/utils/: factories.py  params_object.py
