[project]
name = "novel-reader"
version = "0.0.1"
authors = [{ name = "Dessera", email = "dessera@qq.com" }]
description = "Automatic translator for light novels"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "deep-translator>=1.11.4",
    "ollama>=0.4.7",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "selenium>=4.29.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

# script
[project.scripts]
novel-reader = "novel_reader.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.7"]
